sort by animal type, name and use two queries to prevent orm in memory (performance issue)